Correctly rejoin chatrooms on reconnect

Reviewed by: Martin Klapetek
BUG: 288327