app/defines.h
@@ -1,0 +1,7 @@
+#ifndef DEFINES_H
+#define DEFINES_H
+
+#define KTP_TEXTUI_CLIENT_NAME "KTp.TextUi"
+#define KTP_TEXTUI_CLIENT_PATH "org.freedesktop.Telepathy.KTp.TextUi"
+
+#endif // DEFINES_H
